--- a/index.html
+++ b/index.html
@@ -3,18 +3,64 @@
 <head>
     <script src="lib/angular.js"></script>
     <script src="lib/d3.js"></script>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+    <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="a-d3/angular-d3.js"></script>
+    <script src="a-d3/d3-force.js"></script>
+    <script src="a-d3/d3-bars.js"></script>
     <script src="js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="app.css">
     <meta charset="UTF-8">
     <title>Test</title>
 </head>
 <body ng-app="PjDke" ng-controller="TestController as tCtrl">
-<h1>AngularJS</h1>
-<p>Nodes: {{nodes.length}}<br>
-    Links: {{links.length}}</p>
-<div width="300" height="300" charge="100" distance="50" d3-nodes="{{nodes}}" d3-links="{{links}}"
-     d3-force="">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+            <!-- Title -->
+            <span class="mdl-layout-title">Process Miner</span>
+        </div>
+    </header>
+    <main class="mdl-layout__content" ng-cloak>
+        <div class="page-content">
+            <div><p>Nodes: {{nodes.length}}<br>
+                Links: {{links.length}}</p>
+            </div>
+            <d3-force width="300" height="300" charge="100" distance="50" d3-nodes="{{nodes}}"
+                      d3-links="{{links}}"></d3-force>
+            <div>
+                Minimum coverage of graph: {{minCoverage}} %
+                <!-- Slider with Starting Value -->
+                <input ng-model="minCoverage" class="mdl-slider mdl-js-slider" type="range"
+                       step="0.1" min="0" max="100" ng-init="minCoverage = 100" tabindex="0">
+                <!-- Numeric Textfield -->
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input ng-model="variant" class="mdl-textfield__input" type="text"
+                           pattern="[0-9]*(\.[0-9]+)?"
+                           id="varId">
+                    <label class="mdl-textfield__label" for="varId">Variant number:</label>
+                    <span class="mdl-textfield__error">Input is not a number!</span>
+                </div>
+                <d3-boxplot d3-data="{{boxplotData}}"></d3-boxplot>
+                <d3-bar d3-data="{{boxplotData}}"></d3-bar>
+            </div>
+
+        </div>
+        <!-- Colored FAB button with ripple -->
+        <button ng-click="reset()"
+                class="mdl-button--floating-action mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+            <i class="material-icons">replay</i>
+        </button>
+    </main>
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <div class="mdl-logo">© US 2016+</div>
+            <ul class="mdl-mini-footer__link-list">
+                <li>PL DKE SS16 G3</li>
+            </ul>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
