--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 </div>
             </div>
             <d3-boxplot d3-data="{{boxplotData}}"></d3-boxplot>
-            <d3-bar d3-data="{{barchartData}}"></d3-bar>
+            <d3-bar d3-data="barchartData"></d3-bar>
         </div>
-        <!-- Colored FAB button with ripple -->
-        <button ng-click="reset()"
-                class="mdl-button--floating-action mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-            <i class="material-icons">replay</i>
-        </button>
     </main>
+    <!-- Colored FAB button with ripple -->
+    <button ng-click="reset()"
+            class="mdl-button--floating-action mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+        <i class="material-icons">replay</i>
+    </button>
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo">© US 2016+</div>
