--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <input ng-model="minCoverage" class="mdl-slider mdl-js-slider" type="range"
                            step="0.1" min="0" max="100" ng-init="minCoverage = 100" tabindex="0">
                     <!-- Numeric Textfield -->
-                    <div class="mdl-textfield mdl-js-textfield">
+                    <div id="textInput" class="mdl-textfield mdl-js-textfield">
                         <input ng-model="variant" class="mdl-textfield__input" type="text"
                                pattern="[0-9]+(,[0-9]+)*"
                                id="varId">
