--- a/rangechart.html
+++ b/rangechart.html
@@ -1,7 +1,7 @@
 <div class="chart" ng-controller="RangeController as rCtrl">
     <div ng-repeat="cur in data.routestats track by cur.routeId">
         <div class="mdl-tooltip mdl-tooltip--right center" for="d3Range{{cur.routeId}}">{{cur.routeId}}</div>
-        <div id="d3Range{{cur.routeId}}" ng-style="{'width':getWidth(cur.coverage)}"
+        <div ng-click="clicked(cur.routeId)" id="d3Range{{cur.routeId}}" ng-style="{'width':getWidth(cur.coverage)}"
              ng-class="getActiveClass(cur.routeId)">
         </div>
     </div>
