--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <div class="limit item"><p>Nodes: {{graphData.nodes.length}}<br>
                     Links: {{graphData.links.length}}</p></div>
                 <div class="limit item">
-                    Minimum coverage of graph: {{minCoverage}} %
+                    <span ng-hide="variant.length >0"> Minimum coverage of graph: {{minCoverage}} %</span>
+                    <span ng-show="variant.length >0">Manual selection - percentage unavailable!</span>
                     <!-- Slider with Starting Value -->
                     <input ng-model="minCoverage" class="mdl-slider mdl-js-slider" type="range"
                            step="0.1" min="0" max="100" ng-init="minCoverage = 100" tabindex="0">
