--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                 <div class="limit item">
                     Coverage: {{updatePercentUI()}}%
                     <!-- Slider with Starting Value -->
-                    <input id="slider" ng-model="minCoverage" class="mdl-slider mdl-js-slider" type="range"
-                           step="0.1" min="0" max="100" ng-init="minCoverage = 100" tabindex="0">
+                    <input ng-init="minCoverage = 100" ng-model="minCoverage" ng-model-options="{ debounce: 50 }"
+                           id="slider" class="mdl-slider mdl-js-slider" tabindex="0"
+                           type="range" step="0.1" min="0" max="100">
                     <!-- Numeric Textfield -->
                     <div id="textInput" class="mdl-textfield mdl-js-textfield">
                         <input ng-model="variant" class="mdl-textfield__input" type="text"
