--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="limit item">
                     Coverage: {{updatePercentUI()}}%
                     <!-- Slider with Starting Value -->
-                    <input ng-init="minCoverage = 100" ng-model="minCoverage" ng-model-options="{ debounce: 50 }"
+                    <input ng-init="minCoverage = 100" ng-model="minCoverage"
                            id="slider" class="mdl-slider mdl-js-slider" tabindex="0"
                            type="range" step="0.1" min="0" max="100">
                     <!-- Numeric Textfield -->
