--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="a-d3/angular-d3.js"></script>
-    <script src="a-d3/d3-force.js"></script>
-    <script src="a-d3/d3-bars.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/bars.js"></script>
+    <script src="a-d3/d3-graph.js"></script>
     <link rel="stylesheet" type="text/css" href="app.css">
     <meta charset="UTF-8">
     <title>Test</title>
@@ -23,46 +22,49 @@
         </div>
     </header>
     <main class="mdl-layout__content" ng-cloak>
-        <div class="page-content">
-            <d3-force id="d3_1" class="item" width="300" height="300" charge="100" distance="50"
-                      d3-data="{{graphData}}"></d3-force>
-            <div>
-                <div class="limit item"><p>Nodes: {{graphData.nodes.length}}<br>
-                    Links: {{graphData.links.length}}</p></div>
-                <div class="limit item">
-                    Coverage: {{updatePercentUI()}}%
-                    <!-- Slider with Starting Value -->
-                    <input ng-init="minCoverage = 100" ng-model="minCoverage"
-                           id="slider" class="mdl-slider mdl-js-slider" tabindex="0"
-                           type="range" step="0.1" min="0" max="100">
-                    <!-- Numeric Textfield -->
-                    <div id="textInput" class="mdl-textfield mdl-js-textfield">
-                        <input ng-model="variant" class="mdl-textfield__input" type="text"
-                               pattern="[0-9]+(,[0-9]+)*"
-                               id="varId">
-                        <label class="mdl-textfield__label" for="varId">Variant number:</label>
-                        <span class="mdl-textfield__error">Input is not a number!</span>
-                    </div>
-                    <div class="flexbox">
-                        <form action="">
-                            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="optCnt">
-                                <input type="radio" ng-model="labeltype" id="optCnt" class="mdl-radio__button"
-                                       name="options" value="Count" checked>
-                                <span class="mdl-radio__label">Count</span>
-                            </label>
-                            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="optTime">
-                                <input type="radio" id="optTime" class="mdl-radio__button" name="options"
-                                       ng-model="labeltype" value="Time">
-                                <span class="mdl-radio__label">Duration</span>
-                            </label>
-                        </form>
+        <div id="container">
+            <div id="left">
+                <svg id="d3_1" class="item" data-d3-graph data-d3-data="{{graphData}}"></svg>
+            </div>
+            <div id="right">
+                <div>
+                    <div class="limit item"><p>Nodes: {{graphData.nodes.length}}<br>
+                        Links: {{graphData.links.length}}</p></div>
+                    <div class="limit item">
+                        Coverage: {{updatePercentUI()}}%
+                        <!-- Slider with Starting Value -->
+                        <input ng-init="minCoverage = 100" ng-model="minCoverage"
+                               id="slider" class="mdl-slider mdl-js-slider" tabindex="0"
+                               type="range" step="0.1" min="0" max="100">
+                        <!-- Numeric Textfield -->
+                        <div id="textInput" class="mdl-textfield mdl-js-textfield">
+                            <input ng-model="variant" class="mdl-textfield__input" type="text"
+                                   pattern="[0-9]+(,[0-9]+)*"
+                                   id="varId">
+                            <label class="mdl-textfield__label" for="varId">Variant number:</label>
+                            <span class="mdl-textfield__error">Input is not a number!</span>
+                        </div>
+                        <div class="flexbox">
+                            <form action="">
+                                <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="optCnt">
+                                    <input type="radio" ng-model="labeltype" id="optCnt" class="mdl-radio__button"
+                                           name="options" value="Count" checked>
+                                    <span class="mdl-radio__label">Count</span>
+                                </label>
+                                <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="optTime">
+                                    <input type="radio" id="optTime" class="mdl-radio__button" name="options"
+                                           ng-model="labeltype" value="Time">
+                                    <span class="mdl-radio__label">Duration</span>
+                                </label>
+                            </form>
+                        </div>
                     </div>
                 </div>
+                <d3-range class="item" d3-data="boxplotData"></d3-range>
+                <d3-bar class="item" d3-data="barchartData"></d3-bar>
             </div>
-            <d3-range class="item" d3-data="boxplotData"></d3-range>
-            <d3-bar class="item" d3-data="barchartData"></d3-bar>
-
-        </div>
+        </div> <!-- end container -->
+        <div class="clear"></div>
     </main>
     <!-- Colored FAB button with ripple -->
     <button ng-click="reset()"
