Tuning UI & small bug fixes + new algorithm for "Rangechart" width calculation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div id="right">
                 <div>
-                    <div class="limit item"><p>Nodes: {{graphData.nodes.length}}<br>
+                    <div class="limit item"><p>Nodes: {{graphData.nodes.length}}&emsp;&nbsp;&emsp;&nbsp;&emsp;&nbsp;
                         Links: {{graphData.links.length}}</p></div>
                     <div class="limit item">
                         Coverage: {{updatePercentUI()}}%
