Simplified duration calculation | minor bugfixes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="limit item">
                     Coverage: {{updatePercentUI()}}%
                     <!-- Slider with Starting Value -->
-                    <input ng-init="minCoverage = 0" ng-model="minCoverage"
+                    <input ng-init="minCoverage = 0" ng-model="minCoverage" ng-model-options='{ debounce: 100 }'
                            id="slider" class="mdl-slider mdl-js-slider" tabindex="0"
                            type="range" step="0.1" min="0" max="100">
                     <!-- Numeric Textfield -->
