--- a/coverageChart.html
+++ b/coverageChart.html
@@ -1,4 +1,4 @@
-<div class="chart" ng-controller="RangeController as rCtrl">
+<div class="chart" ng-controller="CoverageController as cCtrl">
     <div ng-repeat="cur in data.routestats track by cur.routeId">
         <div class="mdl-tooltip mdl-tooltip--left center" for="d3Range{{cur.routeId}}">{{cur.routeId}}</div>
         <div ng-click="clicked(cur.routeId)" id="d3Range{{cur.routeId}}" ng-style="{'width':getWidth(cur.coverage)}"
