--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <script src="lib/angular.js"></script>
     <script src="lib/d3.min.js"></script>
     <script src="lib/dagre-d3.min.js"></script>
-    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
-    <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="lib/material.min.css">
+    <script src="lib/material.min.js"></script>
+    <link rel="stylesheet" href="lib/material-icons/font.css">
     <script src="js/index.js"></script>
     <script src="js/diagrams.js"></script>
     <script src="js/graph.js"></script>
