--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo">© US 2016+</div>
             <ul class="mdl-mini-footer__link-list">
-                <li>PL DKE SS16 G3</li>
+                <li>PJ DKE SS16 G3</li>
             </ul>
         </div>
     </footer>
