--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                pattern="[0-9]+(,[0-9]+)*"
                                id="varId">
                         <label class="mdl-textfield__label" for="varId">Variant number:</label>
-                        <span class="mdl-textfield__error">Input is not a number!</span>
+                        <span class="mdl-textfield__error">Incorrect input!</span>
                     </div>
                     <div class="flexbox">
                         <form action="">
